--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -179,3 +179,14 @@ a {
     font-weight: 300;
     margin-top: 20px;
 }
+.presentation__rrss {
+    display: flex;
+    justify-content: space-between;
+    width: 176px;
+    height: 20px;
+    margin-top: 20px;
+}
+.presentation__rrss--item img {
+    width: 100%;
+    height: 100%;
+}
