--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -250,8 +250,8 @@ a {
     width: 4px;
     height: 4px;
     background-color: var(--white);
-    top: 46.5%;
-    left: 48.5%;
+    top: 43.1rem;
+    left: 15.6rem;
     animation: down 2s infinite;
     -webkit-animation: down 2s infinite;
 }
