--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -221,11 +221,11 @@ a {
 .scroll__title {
     font-size: 1.2rem;
     font-weight: 300;
-    margin-bottom: 2rem;
 }
 
 .scroll__container {
-    padding: 1.2rem 1rem;
+    margin-top: 12px;
+    padding: 1.2rem 0.6rem;
     border: 3px solid var(--white);
     border-radius: 20px;
     -webkit-border-radius: 20px;
@@ -238,9 +238,7 @@ a {
 }
 
 .scroll__container--point {
-    font-weight: 600;
-    font-size: 5rem;
-    position: absolute;
+    margin: 0 auto;
     border: 4px solid var(--white);
     border-radius: 20px;
     -webkit-border-radius: 20px;
@@ -250,8 +248,6 @@ a {
     width: 4px;
     height: 4px;
     background-color: var(--white);
-    top: 43.1rem;
-    left: 15.6rem;
     animation: down 2s infinite;
     -webkit-animation: down 2s infinite;
 }
@@ -260,24 +256,24 @@ a {
 
 @keyframes down {
     0% {
-        transform: translate(0, 0);
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
-        -ms-transform: translate(0, 0);
-        -o-transform: translate(0, 0);
-    }
+        transform: translate(0, -8px);
+        -webkit-transform: translate(0, -8px);
+        -moz-transform: translate(0, -8px);
+        -ms-transform: translate(0, -8px);
+        -o-transform: translate(0, -8px);
+}
     50% {
-        transform: translate(0, 15px);
-        -webkit-transform: translate(0, 15px);
-        -moz-transform: translate(0, 15px);
-        -ms-transform: translate(0, 15px);
-        -o-transform: translate(0, 15px);
-    }
+        transform: translate(0, 10px);
+        -webkit-transform: translate(0, 10px);
+        -moz-transform: translate(0, 10px);
+        -ms-transform: translate(0, 10px);
+        -o-transform: translate(0, 10px);
+}
     100% {
-        transform: translate(0, 0);
-        -webkit-transform: translate(0, 0);
-        -moz-transform: translate(0, 0);
-        -ms-transform: translate(0, 0);
-        -o-transform: translate(0, 0);
+        transform: translate(0, -8px);
+        -webkit-transform: translate(0, -8px);
+        -moz-transform: translate(0, -8px);
+        -ms-transform: translate(0, -8px);
+        -o-transform: translate(0, -8px);
 }
 }
