--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -17,13 +17,13 @@ html {
     font-family: 'Rubik', sans-serif;
     font-size: 62.5%;
     color: var(--white);
-    background-color: red;
 }
 
 a {
     color: var(--white);
 }
 
+/* --------------------HEADER------------------------------------------------  */
 .intro {
     width: 100%;
     height: 500px;
@@ -32,7 +32,7 @@ a {
 }
 
 .navbar {
-    padding: 16px;
+    padding: 16px;  
     box-shadow: 0 0 1px var(--white);
 }
 
@@ -252,8 +252,23 @@ a {
     -webkit-animation: down 2s infinite;
 }
 
+/* ------------------------- ABOUT ------------------- */
+.about {
+    background-color: var(--blue);
+    width: 100%;
+    height: 500px;
+    padding: 2.8rem 3.6rem;
+}
+.about__title {
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+.about__img {
+    width: 108px;
+    height: 108px;
+}
 
-
+/* ------------------------- ANIMATIONS ------------- */
 @keyframes down {
     0% {
         transform: translate(0, -8px);
