--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -226,7 +226,7 @@ a {
 .scroll__container {
     margin-top: 0.6rem;
     padding: 1.2rem 0.6rem;
-    border: 3px solid var(--white);
+    border: 2px solid var(--white);
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
@@ -239,7 +239,7 @@ a {
 
 .scroll__container--point {
     margin: 0 auto;
-    border: 4px solid var(--white);
+    border: 3px solid var(--white);
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
@@ -258,14 +258,17 @@ a {
     width: 100%;
     height: 500px;
     padding: 2.8rem 3.6rem;
+    display: flex;
+    flex-direction: column;
 }
 .about__title {
     font-size: 1.8rem;
     font-weight: 600;
 }
 .about__img {
-    width: 108px;
-    height: 108px;
+    width: 128px;
+    height: 128px;
+    align-self: center;
 }
 
 /* ------------------------- ANIMATIONS ------------- */
