--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -32,7 +32,7 @@ a {
 }
 
 .navbar {
-    padding: 16px;  
+    padding: 16px;
     box-shadow: 0 0 1px var(--white);
 }
 
@@ -261,14 +261,47 @@ a {
     display: flex;
     flex-direction: column;
 }
+
 .about__title {
     font-size: 1.8rem;
     font-weight: 600;
 }
+
 .about__img {
     width: 128px;
     height: 128px;
     align-self: center;
+    margin-top: 2.8rem;
+}
+
+.about__description {
+    font-size: 1.4rem;
+    font-weight: 300;
+    margin-top: 2.8rem;
+}
+
+.about__button {
+    align-self: center;
+    width: 112px;
+    height: 30px;
+    margin-top: 2.8rem;
+    color: var(--blue);
+    background-color: var(--cta);
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: 'Rubik', sans-serif;
+    border: none;
+}
+
+.about__button--txt {
+    font-size: 1.2rem;
+    font-weight: 400;
 }
 
 /* ------------------------- ANIMATIONS ------------- */
@@ -279,19 +312,21 @@ a {
         -moz-transform: translate(0, -8px);
         -ms-transform: translate(0, -8px);
         -o-transform: translate(0, -8px);
-}
+    }
+
     50% {
         transform: translate(0, 10px);
         -webkit-transform: translate(0, 10px);
         -moz-transform: translate(0, 10px);
         -ms-transform: translate(0, 10px);
         -o-transform: translate(0, 10px);
-}
+    }
+
     100% {
         transform: translate(0, -8px);
         -webkit-transform: translate(0, -8px);
         -moz-transform: translate(0, -8px);
         -ms-transform: translate(0, -8px);
         -o-transform: translate(0, -8px);
-}
+    }
 }
