--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -282,9 +282,10 @@ a {
 
 .about__button {
     align-self: center;
-    width: 112px;
-    height: 30px;
+    width: 118px;
+    height: 34px;
     margin-top: 2.8rem;
+    padding: 0.4rem 0.6rem;
     color: var(--blue);
     background-color: var(--cta);
     border-radius: 8px;
