--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -304,7 +304,36 @@ a {
     font-size: 1.2rem;
     font-weight: 400;
 }
-
+.about__skills {
+    margin-top: 2.8rem;
+}
+.about__skills--title {
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+.about__skills--container {
+    width: 24.8rem;
+    height: 5rem;
+    margin-top: 2.8rem;
+    padding: 0.9rem 0;
+    background-color: var(--purple);
+    border-radius: 12px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.about__skills--container figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.about__skills--container img {
+    width: 2.4rem;
+    height: 2.4rem;
+}
 /* ------------------------- ANIMATIONS ------------- */
 @keyframes down {
     0% {
