--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -32,8 +32,12 @@ a {
 }
 
 .navbar {
+    background-color: var(--blue);
+    /* background-image: linear-gradient(160deg, #27336e 0%, #8478f8 100%); */
     padding: 16px;
     box-shadow: 0 0 1px var(--white);
+    position: sticky;
+    top: 0;
 }
 
 .navbar__head {
@@ -150,9 +154,9 @@ a {
 .navbar__menu {
     background-color: var(--blue);
     width: 260px;
+    padding: 2.8rem 3.6rem;
     position: fixed;
     top: 0;
-    bottom: 0;
     right: -260px;
     font-size: 1.8rem;
     font-weight: 400;
@@ -170,7 +174,7 @@ a {
 }
 
 .navbar__menu--list-item {
-    padding: 28px 36px 0;
+    padding: 1.4rem 0;
 }
 
 #menu_on-off:checked~.navbar__menu {
@@ -181,6 +185,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 5.8rem;
 }
 
 .presentation__avatar {
@@ -233,8 +238,6 @@ a {
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
     margin-left: 2px;
-    animation: alternate 2s infinite;
-    -webkit-animation: alternate 2s infinite;
 }
 
 .scroll__container--point {
@@ -250,6 +253,7 @@ a {
     background-color: var(--white);
     animation: down 2s infinite;
     -webkit-animation: down 2s infinite;
+    z-index: 1;
 }
 
 /* ------------------------- ABOUT ------------------- */
@@ -262,7 +266,7 @@ a {
     flex-direction: column;
 }
 
-.about__title {
+.about__title, .portfolio__title {
     font-size: 1.8rem;
     font-weight: 600;
 }
@@ -324,6 +328,7 @@ a {
     -o-border-radius: 12px;
     display: flex;
     justify-content: space-evenly;
+    box-shadow: 0 0 1rem rgba(249, 249, 255, 0.5);
 }
 .about__skills--container figure {
     display: flex;
@@ -334,6 +339,46 @@ a {
     width: 2.4rem;
     height: 2.4rem;
 }
+
+/* ------------------------- ABOUT ------------------- */
+.portfolio {
+    background-color: var(--purple);
+    padding: 2.8rem 3.6rem;
+}
+.portfolio__container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.portfolio__container--item {
+    width: 100%;
+    height: 148px;
+    background-color: var(--blue);
+    margin-top: 2.8rem;
+    border-radius: 1.2rem;
+    -webkit-border-radius: 1.2rem;
+    -moz-border-radius: 1.2rem;
+    -ms-border-radius: 1.2rem;
+    -o-border-radius: 1.2rem;
+    box-shadow: 0 0 1rem rgba(249, 249, 255, 0.5);
+}
+.portfolio__container--item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1.2rem;
+    -webkit-border-radius: 1.2rem;
+    -moz-border-radius: 1.2rem;
+    -ms-border-radius: 1.2rem;
+    -o-border-radius: 1.2rem;
+}
+.portfolio__container--item div {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    
+}
+
+
 /* ------------------------- ANIMATIONS ------------- */
 @keyframes down {
     0% {
