--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -361,16 +361,12 @@ a {
     -ms-border-radius: 1.2rem;
     -o-border-radius: 1.2rem;
     box-shadow: 0 .3rem 1rem rgba(39, 51, 110, 0.5);
+    overflow: hidden;
 }
 .portfolio__container--item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 1.2rem;
-    -webkit-border-radius: 1.2rem;
-    -moz-border-radius: 1.2rem;
-    -ms-border-radius: 1.2rem;
-    -o-border-radius: 1.2rem;
 }
 .portfolio__container--item figcaption {
     background-color: rgba(0, 0, 0, 0.5);
