--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -349,7 +349,7 @@ a {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-}
+} 
 .portfolio__container--item {
     width: 100%;
     height: 148px;
@@ -362,6 +362,11 @@ a {
     -o-border-radius: 1.2rem;
     box-shadow: 0 .3rem 1rem rgba(39, 51, 110, 0.5);
     overflow: hidden;
+    display: grid;
+    grid-template-areas: "stack";
+}
+.portfolio__container--item img, .portfolio__container--item figcaption {
+    grid-area: stack;
 }
 .portfolio__container--item img {
     width: 100%;
@@ -370,7 +375,23 @@ a {
 }
 .portfolio__container--item figcaption {
     background-color: rgba(0, 0, 0, 0.5);
-    
+    padding: 0.8rem;
+    width: 100%;
+    height: 45%;
+    position: relative;
+    top: 55%;
+    border-radius: 0.6rem;
+    -webkit-border-radius: 0.6rem;
+    -moz-border-radius: 0.6rem;
+    -ms-border-radius: 0.6rem;
+    -o-border-radius: 0.6rem;
+}
+.portfolio__container--item > figcaption > h3, .portfolio__container--item > figcaption > p {
+    padding-bottom: 0.4rem;
+}
+.portfolio__container--item > figcaption > img {
+    width: 20px;
+    height: 20px;
 }
 
 
