--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -353,7 +353,7 @@ a {
 .portfolio__container--item {
     width: 100%;
     height: 148px;
-    background-color: var(--blue);
+    /* background-color: var(--blue); */
     margin-top: 2.8rem;
     border-radius: 1.2rem;
     -webkit-border-radius: 1.2rem;
@@ -361,9 +361,10 @@ a {
     -ms-border-radius: 1.2rem;
     -o-border-radius: 1.2rem;
     box-shadow: 0 .3rem 1rem rgba(39, 51, 110, 0.5);
-    overflow: hidden;
     display: grid;
+    grid-template-rows: minmax(100%, 1fr);
     grid-template-areas: "stack";
+    overflow: hidden;
 }
 .portfolio__container--item img, .portfolio__container--item figcaption {
     grid-area: stack;
@@ -375,7 +376,7 @@ a {
 }
 .portfolio__container--item figcaption {
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 0.8rem;
+    padding: 0.8rem 1.6rem;
     width: 100%;
     height: 45%;
     position: relative;
