--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -348,10 +348,11 @@ a {
 .portfolio__container {
     width: 100%;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
 } 
 .portfolio__container--item {
-    width: 100%;
+    width: 248px;
     height: 148px;
     /* background-color: var(--blue); */
     margin-top: 2.8rem;
