--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -266,7 +266,7 @@ a {
     flex-direction: column;
 }
 
-.about__title, .portfolio__title {
+.about__title, .portfolio__title, .blog__title {
     font-size: 1.8rem;
     font-weight: 600;
 }
@@ -341,20 +341,19 @@ a {
 }
 
 /* ------------------------- ABOUT ------------------- */
-.portfolio {
+.portfolio, .blog {
     background-color: var(--purple);
     padding: 2.8rem 3.6rem;
 }
-.portfolio__container {
+.portfolio__container, .blog__container {
     width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-} 
-.portfolio__container--item {
+}
+.portfolio__container--item, .blog__container--item {
     width: 248px;
     height: 148px;
-    /* background-color: var(--blue); */
     margin-top: 2.8rem;
     border-radius: 1.2rem;
     -webkit-border-radius: 1.2rem;
@@ -367,15 +366,15 @@ a {
     grid-template-areas: "stack";
     overflow: hidden;
 }
-.portfolio__container--item img, .portfolio__container--item figcaption {
+.portfolio__container--item img, .portfolio__container--item figcaption, .blog__container--item img, .blog__container--item figcaption {
     grid-area: stack;
 }
-.portfolio__container--item img {
+.portfolio__container--item img, .blog__container--item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.portfolio__container--item figcaption {
+.portfolio__container--item figcaption, .blog__container--item figcaption {
     background-color: rgba(0, 0, 0, 0.5);
     padding: 0.8rem 1.6rem;
     width: 100%;
@@ -388,12 +387,21 @@ a {
     -ms-border-radius: 0.6rem;
     -o-border-radius: 0.6rem;
 }
-.portfolio__container--item > figcaption > h3, .portfolio__container--item > figcaption > p {
+.portfolio__container--item > figcaption > h3, .portfolio__container--item > figcaption > p, .blog__container--item > figcaption > h3, .blog__container--item > figcaption > p {
     padding-bottom: 0.4rem;
 }
 .portfolio__container--item > figcaption > img {
     width: 20px;
     height: 20px;
+}
+
+/* ------------------------- BLOG ------------------- */
+.blog {
+    background-color: var(--blue);
+}
+.blog__container--item {
+    background-color: var(--purple);
+    box-shadow: 0 0.3rem 1rem rgba(132, 120, 248, 0.5);
 }
 
 
