--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -26,7 +26,7 @@ a {
 /* --------------------HEADER------------------------------------------------  */
 .intro {
     width: 100%;
-    height: 500px;
+    height: 50rem;
     background-color: #27336e;
     background-image: linear-gradient(160deg, #27336e 0%, #8478f8 100%);
 }
@@ -34,7 +34,7 @@ a {
 .navbar {
     background-color: var(--blue);
     /* background-image: linear-gradient(160deg, #27336e 0%, #8478f8 100%); */
-    padding: 16px;
+    padding: 1.6rem;
     box-shadow: 0 0 .5rem rgba(249, 249, 255, 0.5);
     position: sticky;
     top: 0;
@@ -53,14 +53,14 @@ a {
 }
 
 .navbar__name--logo {
-    width: 30px;
-    height: 25px;
+    width: 3rem;
+    height: 2.5rem;
 }
 
 .navbar__name--title {
     font-size: 2rem;
     font-weight: 600;
-    margin-left: 10px;
+    margin-left: 1rem;
 }
 
 #menu_on-off {
@@ -71,8 +71,8 @@ a {
 
 .navbar__toggle-button {
     display: block;
-    width: 30px;
-    height: 25px;
+    width: 3rem;
+    height: 2.5rem;
     cursor: pointer;
     display: flex;
     align-content: space-between;
@@ -82,13 +82,13 @@ a {
 
 .navbar__toggle-button span {
     width: 50%;
-    height: 3px;
+    height: 0.3rem;
     background-color: var(--white);
-    border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
-    -o-border-radius: 2px;
+    border-radius: 0.2rem;
+    -webkit-border-radius: 0.2rem;
+    -moz-border-radius: 0.2rem;
+    -ms-border-radius: 0.2rem;
+    -o-border-radius: 0.2rem;
     display: block;
     margin-left: 50%;
     transition: all 0.2s ease-out;
@@ -105,20 +105,20 @@ a {
 
 #menu_on-off:checked~.navbar__name {
     transition: all 0.25s linear;
-    transform: translate(-260px, 0);
-    -webkit-transform: translate(-260px, 0);
-    -moz-transform: translate(-260px, 0);
-    -ms-transform: translate(-260px, 0);
-    -o-transform: translate(-260px, 0);
+    transform: translate(-26rem, 0);
+    -webkit-transform: translate(-26rem, 0);
+    -moz-transform: translate(-26rem, 0);
+    -ms-transform: translate(-26rem, 0);
+    -o-transform: translate(-26rem, 0);
 }
 
 #menu_on-off:checked+.navbar__toggle-button {
     transition: all 0.25s linear;
-    transform: translate(-260px, 0);
-    -webkit-transform: translate(-260px, 0);
-    -moz-transform: translate(-260px, 0);
-    -ms-transform: translate(-260px, 0);
-    -o-transform: translate(-260px, 0);
+    transform: translate(-26rem, 0);
+    -webkit-transform: translate(-26rem, 0);
+    -moz-transform: translate(-26rem, 0);
+    -ms-transform: translate(-26rem, 0);
+    -o-transform: translate(-26rem, 0);
     -webkit-transition: all 0.25s linear;
     -moz-transition: all 0.25s linear;
     -ms-transition: all 0.25s linear;
@@ -153,11 +153,11 @@ a {
 
 .navbar__menu {
     background-color: var(--blue);
-    width: 260px;
+    width: 26rem;
     padding: 2.8rem 3.6rem;
     position: fixed;
     top: 0;
-    right: -260px;
+    right: -26rem;
     font-size: 1.8rem;
     font-weight: 400;
     border-radius: 1.2rem;
@@ -178,7 +178,7 @@ a {
 }
 
 #menu_on-off:checked~.navbar__menu {
-    right: 0px;
+    right: 0;
 }
 
 .presentation {
@@ -189,38 +189,38 @@ a {
 }
 
 .presentation__avatar {
-    width: 124px;
-    height: 124px;
-    margin-top: 63px;
+    width: 12.4rem;
+    height: 12.4rem;
+    margin-top: 6.3rem;
 }
 
 .presentation__title {
     font-size: 1.8rem;
     font-weight: 400;
-    margin-top: 24px;
+    margin-top: 2.4rem;
 }
 
 .presentation__phrase {
     font-size: 1.2rem;
     font-weight: 300;
-    margin-top: 24px;
+    margin-top: 2.4rem;
 }
 
 .presentation__rrss {
     display: flex;
     justify-content: space-between;
-    width: 184px;
-    height: 24px;
-    margin-top: 24px;
+    width: 18.4rem;
+    height: 2.4rem;
+    margin-top: 2.4rem;
 }
 
 .presentation__rrss--item img {
-    width: 24px;
-    height: 24px;
+    width: 2.4rem;
+    height: 2.4rem;
 }
 
 .scroll {
-    margin: 26px 0;
+    margin: 2.6rem 0;
 }
 
 .scroll__title {
@@ -231,25 +231,25 @@ a {
 .scroll__container {
     margin-top: 0.6rem;
     padding: 1.2rem 0.6rem;
-    border: 2px solid var(--white);
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-    margin-left: 2px;
+    border: 0.2rem solid var(--white);
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+    margin-left: 0.2rem;
 }
 
 .scroll__container--point {
     margin: 0 auto;
-    border: 3px solid var(--white);
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-    width: 4px;
-    height: 4px;
+    border: 0.3rem solid var(--white);
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+    width: 0.4rem;
+    height: 0.4rem;
     background-color: var(--white);
     animation: down 2s infinite;
     -webkit-animation: down 2s infinite;
@@ -260,7 +260,7 @@ a {
 .about {
     background-color: var(--blue);
     width: 100%;
-    height: 500px;
+    height: 50rem;
     padding: 2.8rem 3.6rem;
     display: flex;
     flex-direction: column;
@@ -272,8 +272,8 @@ a {
 }
 
 .about__img {
-    width: 128px;
-    height: 128px;
+    width: 12.8rem;
+    height: 12.8rem;
     align-self: center;
     margin-top: 2.8rem;
 }
@@ -286,17 +286,17 @@ a {
 
 .about__button {
     align-self: center;
-    width: 118px;
-    height: 34px;
+    width: 11.8rem;
+    height: 30.4rem;
     margin-top: 2.8rem;
     padding: 0.4rem 0.6rem;
     color: var(--blue);
     background-color: var(--cta);
-    border-radius: 8px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -ms-border-radius: 8px;
-    -o-border-radius: 8px;
+    border-radius: 0.8rem;
+    -webkit-border-radius: 0.8rem;
+    -moz-border-radius: 0.8rem;
+    -ms-border-radius: 0.8rem;
+    -o-border-radius: 0.8rem;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -321,11 +321,11 @@ a {
     margin-top: 2.8rem;
     padding: 0.9rem 0;
     background-color: var(--purple);
-    border-radius: 12px;
-    -webkit-border-radius: 12px;
-    -moz-border-radius: 12px;
-    -ms-border-radius: 12px;
-    -o-border-radius: 12px;
+    border-radius: 1.2rem;
+    -webkit-border-radius: 1.2rem;
+    -moz-border-radius: 1.2rem;
+    -ms-border-radius: 1.2rem;
+    -o-border-radius: 1.2rem;
     display: flex;
     justify-content: space-evenly;
     box-shadow: 0 0 1rem rgba(132, 120, 248 , 0.5);
@@ -352,8 +352,8 @@ a {
     flex-wrap: wrap;
 }
 .portfolio__container--item, .blog__container--item {
-    width: 248px;
-    height: 148px;
+    width: 24.8rem;
+    height: 14.8rem;
     margin-top: 2.8rem;
     border-radius: 1.2rem;
     -webkit-border-radius: 1.2rem;
@@ -391,8 +391,8 @@ a {
     padding-bottom: 0.4rem;
 }
 .portfolio__container--item > figcaption > img {
-    width: 20px;
-    height: 20px;
+    width: 2rem;
+    height: 2rem;
 }
 
 /* ------------------------- BLOG ------------------- */
@@ -408,26 +408,26 @@ a {
 /* ------------------------- ANIMATIONS ------------- */
 @keyframes down {
     0% {
-        transform: translate(0, -8px);
-        -webkit-transform: translate(0, -8px);
-        -moz-transform: translate(0, -8px);
-        -ms-transform: translate(0, -8px);
-        -o-transform: translate(0, -8px);
+        transform: translate(0, -0.8rem);
+        -webkit-transform: translate(0, -0.8rem);
+        -moz-transform: translate(0, -0.8rem);
+        -ms-transform: translate(0, -0.8rem);
+        -o-transform: translate(0, -0.8rem);
     }
 
     50% {
-        transform: translate(0, 10px);
-        -webkit-transform: translate(0, 10px);
-        -moz-transform: translate(0, 10px);
-        -ms-transform: translate(0, 10px);
-        -o-transform: translate(0, 10px);
+        transform: translate(0, 1rem);
+        -webkit-transform: translate(0, 1rem);
+        -moz-transform: translate(0, 1rem);
+        -ms-transform: translate(0, 1rem);
+        -o-transform: translate(0, 1rem);
     }
 
     100% {
-        transform: translate(0, -8px);
-        -webkit-transform: translate(0, -8px);
-        -moz-transform: translate(0, -8px);
-        -ms-transform: translate(0, -8px);
-        -o-transform: translate(0, -8px);
+        transform: translate(0, -0.8rem);
+        -webkit-transform: translate(0, -0.8rem);
+        -moz-transform: translate(0, -0.8rem);
+        -ms-transform: translate(0, -0.8rem);
+        -o-transform: translate(0, -0.8rem);
     }
 }
