--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -38,6 +38,7 @@ a {
     box-shadow: 0 0 .5rem rgba(249, 249, 255, 0.5);
     position: sticky;
     top: 0;
+    z-index: 2;
 }
 
 .navbar__head {
