--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -23,7 +23,62 @@ a {
     color: var(--white);
 }
 
-/* --------------------HEADER------------------------------------------------  */
+/* ------------------------- GLOBALS ------------- */
+.titles-section {
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+.containers-sections {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.containers-sections__item {
+    width: 24.8rem;
+    height: 14.8rem;
+    margin-top: 2.8rem;
+    border-radius: 1.2rem;
+    -webkit-border-radius: 1.2rem;
+    -moz-border-radius: 1.2rem;
+    -ms-border-radius: 1.2rem;
+    -o-border-radius: 1.2rem;
+    box-shadow: 0 .3rem 1rem rgba(39, 51, 110, 0.5);
+    display: grid;
+    grid-template-rows: minmax(100%, 1fr);
+    grid-template-areas: "stack";
+    overflow: hidden;
+}
+.containers-sections__item img, .containers-sections__item figcaption {
+    grid-area: stack;
+}
+.containers-sections__item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.containers-sections__item figcaption {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 0.8rem 1.6rem;
+    width: 100%;
+    height: 45%;
+    position: relative;
+    top: 55%;
+    border-radius: 0.6rem;
+    -webkit-border-radius: 0.6rem;
+    -moz-border-radius: 0.6rem;
+    -ms-border-radius: 0.6rem;
+    -o-border-radius: 0.6rem;
+}
+.containers-sections__item > figcaption > h3, .containers-sections__item > figcaption > p {
+    padding-bottom: 0.4rem;
+}
+.containers-sections__item > figcaption > img {
+    width: 2rem;
+    height: 2rem;
+}
+
+/* ------------------------- HEADER ------------- */
 .intro {
     width: 100%;
     height: 50rem;
@@ -273,10 +328,6 @@ a {
     flex-direction: column;
 }
 
-.about__title, .portfolio__title, .blog__title {
-    font-size: 1.8rem;
-    font-weight: 600;
-}
 
 .about__img {
     width: 12.8rem;
@@ -347,59 +398,10 @@ a {
     height: 2.4rem;
 }
 
-/* ------------------------- ABOUT ------------------- */
+/* ------------------------- PORTFOLIO ------------------------ */
 .portfolio, .blog {
     background-color: var(--purple);
     padding: 2.8rem 3.6rem;
-}
-.portfolio__container, .blog__container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-.portfolio__container--item, .blog__container--item {
-    width: 24.8rem;
-    height: 14.8rem;
-    margin-top: 2.8rem;
-    border-radius: 1.2rem;
-    -webkit-border-radius: 1.2rem;
-    -moz-border-radius: 1.2rem;
-    -ms-border-radius: 1.2rem;
-    -o-border-radius: 1.2rem;
-    box-shadow: 0 .3rem 1rem rgba(39, 51, 110, 0.5);
-    display: grid;
-    grid-template-rows: minmax(100%, 1fr);
-    grid-template-areas: "stack";
-    overflow: hidden;
-}
-.portfolio__container--item img, .portfolio__container--item figcaption, .blog__container--item img, .blog__container--item figcaption {
-    grid-area: stack;
-}
-.portfolio__container--item img, .blog__container--item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.portfolio__container--item figcaption, .blog__container--item figcaption {
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 0.8rem 1.6rem;
-    width: 100%;
-    height: 45%;
-    position: relative;
-    top: 55%;
-    border-radius: 0.6rem;
-    -webkit-border-radius: 0.6rem;
-    -moz-border-radius: 0.6rem;
-    -ms-border-radius: 0.6rem;
-    -o-border-radius: 0.6rem;
-}
-.portfolio__container--item > figcaption > h3, .portfolio__container--item > figcaption > p, .blog__container--item > figcaption > h3, .blog__container--item > figcaption > p {
-    padding-bottom: 0.4rem;
-}
-.portfolio__container--item > figcaption > img {
-    width: 2rem;
-    height: 2rem;
 }
 
 /* ------------------------- BLOG ------------------- */
