--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -28,12 +28,14 @@ a {
     font-size: 1.8rem;
     font-weight: 600;
 }
+
 .containers-sections {
     width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
+
 .containers-sections__item {
     width: 24.8rem;
     height: 14.8rem;
@@ -49,14 +51,18 @@ a {
     grid-template-areas: "stack";
     overflow: hidden;
 }
-.containers-sections__item img, .containers-sections__item figcaption {
+
+.containers-sections__item img,
+.containers-sections__item figcaption {
     grid-area: stack;
 }
+
 .containers-sections__item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .containers-sections__item figcaption {
     background-color: rgba(0, 0, 0, 0.5);
     padding: 0.8rem 1.6rem;
@@ -70,10 +76,13 @@ a {
     -ms-border-radius: 0.6rem;
     -o-border-radius: 0.6rem;
 }
-.containers-sections__item > figcaption > h3, .containers-sections__item > figcaption > p {
+
+.containers-sections__item>figcaption>h3,
+.containers-sections__item>figcaption>p {
     padding-bottom: 0.4rem;
 }
-.containers-sections__item > figcaption > img {
+
+.containers-sections__item>figcaption>img {
     width: 2rem;
     height: 2rem;
 }
@@ -251,15 +260,16 @@ a {
 }
 
 .presentation__title {
-        font-size: 1.8rem;
-        font-weight: 400;
-        margin-top: 2.4rem;
-        /*animation*/white-space: nowrap;
-        border-right: 2px solid;
-        width: 17ch;
-        animation: typing 2s steps(17), blink 0.5s infinite step-end alternate;
-        -webkit-animation: typing 2s steps(17), blink 0.5s infinite step-end alternate;
-        overflow: hidden;
+    font-size: 1.8rem;
+    font-weight: 400;
+    margin-top: 2.4rem;
+    /*animation*/
+    white-space: nowrap;
+    border-right: 2px solid;
+    width: 17ch;
+    animation: typing 2s steps(17), blink 0.5s infinite step-end alternate;
+    -webkit-animation: typing 2s steps(17), blink 0.5s infinite step-end alternate;
+    overflow: hidden;
 }
 
 .presentation__phrase {
@@ -366,13 +376,16 @@ a {
     font-size: 1.2rem;
     font-weight: 400;
 }
+
 .about__skills {
     margin-top: 2.8rem;
 }
+
 .about__skills--title {
     font-size: 1.2rem;
     font-weight: 400;
 }
+
 .about__skills--container {
     width: 24.8rem;
     height: 5rem;
@@ -386,20 +399,23 @@ a {
     -o-border-radius: 1.2rem;
     display: flex;
     justify-content: space-evenly;
-    box-shadow: 0 0 1rem rgba(132, 120, 248 , 0.5);
+    box-shadow: 0 0 1rem rgba(132, 120, 248, 0.5);
 }
+
 .about__skills--container figure {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .about__skills--container img {
     width: 2.4rem;
     height: 2.4rem;
 }
 
 /* ------------------------- PORTFOLIO ------------------------ */
-.portfolio, .blog {
+.portfolio,
+.blog, .contact {
     background-color: var(--purple);
     padding: 2.8rem 3.6rem;
 }
@@ -408,6 +424,7 @@ a {
 .blog {
     background-color: var(--blue);
 }
+
 .blog__container--item {
     background-color: var(--purple);
     box-shadow: 0 0.3rem 1rem rgba(132, 120, 248, 0.5);
@@ -446,6 +463,7 @@ a {
         width: 0;
     }
 }
+
 @keyframes blink {
     50% {
         border-color: transparent;
