Agregué clase global para los estilos compartidos de las secciones

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -414,8 +414,7 @@ a {
 }
 
 /* ------------------------- PORTFOLIO ------------------------ */
-.portfolio,
-.blog, .contact {
+.sections {
     background-color: var(--purple);
     padding: 2.8rem 3.6rem;
 }
