--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -87,6 +87,27 @@ a {
     height: 2rem;
 }
 
+.button {
+    align-self: center;
+    width: 11.8rem;
+    height: 3.4rem;
+    margin-top: 2.8rem;
+    padding: 0.4rem 0.6rem;
+    color: var(--blue);
+    background-color: var(--cta);
+    border-radius: 0.8rem;
+    -webkit-border-radius: 0.8rem;
+    -moz-border-radius: 0.8rem;
+    -ms-border-radius: 0.8rem;
+    -o-border-radius: 0.8rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: 'Rubik', sans-serif;
+    border: none;
+    cursor: pointer;
+}
+
 /* ------------------------- HEADER ------------- */
 .intro {
     width: 100%;
@@ -352,25 +373,6 @@ a {
     margin-top: 2.8rem;
 }
 
-.about__button {
-    align-self: center;
-    width: 11.8rem;
-    height: 3.4rem;
-    margin-top: 2.8rem;
-    padding: 0.4rem 0.6rem;
-    color: var(--blue);
-    background-color: var(--cta);
-    border-radius: 0.8rem;
-    -webkit-border-radius: 0.8rem;
-    -moz-border-radius: 0.8rem;
-    -ms-border-radius: 0.8rem;
-    -o-border-radius: 0.8rem;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    font-family: 'Rubik', sans-serif;
-    border: none;
-}
 
 .about__button--txt {
     font-size: 1.2rem;
@@ -435,6 +437,9 @@ a {
     font-weight: 300;
     margin-top: 1.4rem;
 }
+.contact__form {
+    flex-direction: column;
+}
 .contact__form--label {
     display: flex;
     flex-direction: column;
@@ -448,6 +453,7 @@ a {
     margin-top: 0.4rem;
     padding: 1.4rem;
     width: 100%;
+    max-width: 24.8rem;
     height: 3rem;
     border: none;
     background-color: var(--white);
