Centré el formulario para resoluciones más grandes

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -439,7 +439,8 @@ a {
 }
 .contact__form {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
+    align-content: center;
 }
 .contact__form--label {
     display: flex;
