--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -108,6 +108,32 @@ a {
     cursor: pointer;
 }
 
+.block-container {
+    width: 24.8rem;
+    height: 5rem;
+    margin-top: 2.8rem;
+    padding: 0.9rem 0;
+    background-color: var(--purple);
+    border-radius: 1.2rem;
+    -webkit-border-radius: 1.2rem;
+    -moz-border-radius: 1.2rem;
+    -ms-border-radius: 1.2rem;
+    -o-border-radius: 1.2rem;
+    display: flex;
+    justify-content: space-evenly;
+    box-shadow: 0 0 1rem rgba(132, 120, 248, 0.5);
+}
+
+.block-container figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.block-container img {
+    width: 2.4rem;
+    height: 2.4rem;
+}
 /* ------------------------- HEADER ------------- */
 .intro {
     width: 100%;
@@ -388,32 +414,6 @@ a {
     font-weight: 400;
 }
 
-.about__skills--container {
-    width: 24.8rem;
-    height: 5rem;
-    margin-top: 2.8rem;
-    padding: 0.9rem 0;
-    background-color: var(--purple);
-    border-radius: 1.2rem;
-    -webkit-border-radius: 1.2rem;
-    -moz-border-radius: 1.2rem;
-    -ms-border-radius: 1.2rem;
-    -o-border-radius: 1.2rem;
-    display: flex;
-    justify-content: space-evenly;
-    box-shadow: 0 0 1rem rgba(132, 120, 248, 0.5);
-}
-
-.about__skills--container figure {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.about__skills--container img {
-    width: 2.4rem;
-    height: 2.4rem;
-}
 
 /* ------------------------- PORTFOLIO ------------------------ */
 .sections {
@@ -465,6 +465,7 @@ a {
     -moz-border-radius: 0.8rem;
     -ms-border-radius: 0.8rem;
     -o-border-radius: 0.8rem;
+    color: #959595;
 }
 .contact__form--label input::placeholder, .contact__form--label textarea {
     color: #959595;
@@ -475,6 +476,10 @@ a {
     font-family: 'Rubik', sans-serif;
     height: 8rem;
     padding-top: 0.8rem;
+}
+.contact__links {
+    background-color: var(--blue);
+    box-shadow: 0 .3rem 1rem rgba(39, 51, 110, 0.5);
 }
 
 /* ------------------------- ANIMATIONS ------------- */
