Agregué y estilé el footer

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -482,6 +482,22 @@ a {
     box-shadow: 0 .3rem 1rem rgba(39, 51, 110, 0.5);
 }
 
+/* ------------------------- BLOG ------------------- */
+footer {
+    width: 100%;
+    height: 5rem;
+    background-color: #000;
+    color: var(--white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+footer > p {
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+
+
 /* ------------------------- ANIMATIONS ------------- */
 @keyframes down {
     0% {
