--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -383,8 +383,12 @@ a {
     padding: 2.8rem 3.6rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
-
+.about__title {
+    display: flex;
+    align-self: flex-start;
+}
 
 .about__img {
     width: 12.8rem;
@@ -432,10 +436,20 @@ a {
 }
 
 /* ------------------------- CONTACT ------------------- */
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contact__title {
+    align-self: flex-start;
+}
 .contact__phrase {
     font-size: 1.2rem;
     font-weight: 300;
     margin-top: 1.4rem;
+    align-self: flex-start;
+
 }
 .contact__form {
     display: flex;
