--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -24,6 +24,10 @@ a {
 }
 
 /* ------------------------- GLOBALS ------------- */
+.sections {
+    background-color: var(--purple);
+    padding: 2.8rem 3.6rem;
+}
 .titles-section {
     font-size: 1.8rem;
     font-weight: 600;
@@ -40,7 +44,6 @@ a {
 .containers-sections__item {
     width: 24.8rem;
     height: 14.8rem;
-    margin-top: 2.8rem;
     border-radius: 1.2rem;
     -webkit-border-radius: 1.2rem;
     -moz-border-radius: 1.2rem;
@@ -421,14 +424,16 @@ a {
 
 
 /* ------------------------- PORTFOLIO ------------------------ */
-.sections {
-    background-color: var(--purple);
-    padding: 2.8rem 3.6rem;
+.portfolio__title {
+    margin-bottom: 2.8rem;
 }
 
 /* ------------------------- BLOG ------------------- */
 .blog {
     background-color: var(--blue);
+}
+.blog__title {
+    margin-bottom: 2.8rem;
 }
 
 .blog__container--item {
@@ -497,7 +502,7 @@ a {
     box-shadow: 0 .3rem 1rem rgba(39, 51, 110, 0.5);
 }
 
-/* ------------------------- BLOG ------------------- */
+/* ------------------------- FOOTER ------------------- */
 footer {
     width: 100%;
     height: 5rem;
