Arreglé el gap del formulario

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -461,6 +461,7 @@ a {
     display: flex;
     flex-direction: column;
     align-content: center;
+    gap: 0;
 }
 .contact__form--label {
     display: flex;
