--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -487,11 +487,14 @@ a {
     -ms-border-radius: 0.8rem;
     -o-border-radius: 0.8rem;
     color: #959595;
+    font-family: 'Rubik', sans-serif;
 }
 .contact__form--label input::placeholder, .contact__form--label textarea {
     color: #959595;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 300;
+    font-family: 'Rubik', sans-serif;
+
 }
 .form__label--message textarea {
     font-family: 'Rubik', sans-serif;
