Agregué el archivo para estilos en tablet Estilé la sección About para que se adapte a tablets

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -405,6 +405,8 @@ a {
     font-size: 1.4rem;
     font-weight: 300;
     margin-top: 2.8rem;
+    max-width: 24.8rem;
+    text-align: justify;
 }
 
 
