--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -7,20 +7,24 @@
     height: 17rem;
     position: absolute;
     top: 9.2rem;
-    left: 10.4rem;
+    /* left: 10.4rem; */
+    left: 15%;
 }
 .about__description {
+    width: 24.8rem;
     position: absolute;
     top: 10.8rem;
-    left: 35.6rem;
+    /* right: 13.6rem; */
+    right: 16%;
 }
 .about__button {
     position: absolute;
     top: 21.2rem;
-    left: 42.4rem;
+    /* right: 20.8rem; */
+    right: 25%;
 }
 .about__skills {
     position: absolute;
     top: 28rem;
-    left: 25.2rem;
+    left: calc(50% - 12.4rem);
 }
