--- a/styles/pc.css
+++ b/styles/pc.css
@@ -15,3 +15,28 @@ main {
 .intro {
     background-image: none;
 }
+.navbar__head {
+    max-width: 84rem;
+    justify-content: space-between;
+}
+.navbar__toggle-button {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+}
+.navbar__menu {
+    background-color: transparent;
+    right: auto;
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    width: auto;
+    box-shadow: none;
+}
+.navbar__menu--list {
+    display: flex;
+    flex-direction: row;
+}
+.navbar__menu--list-item {
+    margin: 0.4rem 1.4rem;
+}
