--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -27,7 +27,7 @@ a {
 /* ------------------------- GLOBALS ------------- */
 .sections {
     background-color: var(--purple);
-    padding: 2.8rem 3.6rem;
+    padding: 2.8rem 3.6rem 3rem;
 }
 .titles-section {
     font-size: 1.8rem;
@@ -417,7 +417,7 @@ a {
     background-color: var(--blue);
     width: 100%;
     height: 50rem;
-    padding: 2.8rem 3.6rem;
+    padding: 2.8rem 3.6rem 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
