--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap');
+
 :root {
     --cta: #73FBD3;
     --blue: #27336E;
